--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>
             <ul>
                 <li>Currently going through an intenship with HNG</li>
-                <li>Learnt basic  HTML, CSS on Codecademy.com.</li>
+                <li>Learnt basic  HTML, CSS on freeCodeCamp.org</li>
                 <li>An independent, dedicated, efficient person. These attributes are proved through the series of courses I have taken or I am taking as of now independently through online platforms.</li>
                 <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li></ul>
             </p>
@@ -44,7 +44,8 @@
             <p>
             <ul>
                 <li>
-                <span id="course-name">HTML & CSS for Beginners – Web Fundamentals</span> – Codecademy.com</li>
+                <span id="course-name">Basic HTML and HTML5 – Freecodecamp.org
+</span> – Codecademy.com</li>
             </ul>
             <h3>Technical Skills</h3>
             <p>
@@ -61,7 +62,7 @@
                 <li>
                 <span id="course-name">Languages Known:</span>English, Yoruba, French</li>
                 <li>
-                <span id="course-name">Hobbies:</span>I love reading Finance and IT related books / magazines, playing Chess, swimming, listening music, surfing Internet, self-learning through e-courses.</li> </ul>
+                <span id="course-name">Hobbies:</span>I love reading Finance and IT related books / magazines,swimming, listening music, surfing Internet, self-learning through e-courses.</li> </ul>
             </p>
             <h3>Other Information</h3>
             <p>
