--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <p>
             <ul>
                 <li>
-                <span id="course-name">Basic HTML and HTML5 – Freecodecamp.org
-</span> – Codecademy.com</li>
+                <span id="course-name">Basic HTML and HTML5 – freeCodeCamp.org
+</span></li>
             </ul>
             <h3>Technical Skills</h3>
             <p>
